# SDLcheack

./: .gitignore  README.md
CreateWindow/: CMakeLists.txt
CreateWindow/src/: main.cpp
DrawColor/: CMakeLists.txt
DrawColor/src/: main.cpp
helloSdl/: CMakeLists.txt
helloSdl/src/: main.cpp
